<resources>
    <string name="app_name">PolyTable</string>
    <string name="action_settings">Settings</string>
    <string name="str_depth">Applied Math Department</string>
    <string name="str_university1">St.Petersburg State</string>
    <string name="str_university2">Polytechnical University</string>
    <string name="str_toweb">To web site</string>
    <string name="str_start">Start</string>
    <string name="str_restart">Restart</string>
    <string name="str_score">Score</string>
    <string name="str_moves">Moves</string>
    <string name="str_total">Total</string>
    <string name="str_combo">Combo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="placeholder_downloading">Downloading..</string>

    <string name="placeholder_turn_on_internet">Turn on the internet</string>

    <string name="sunday">For crying out loud, it\'s sunday</string>

    <string name="btn_login_choose_gr">Load shared group</string>
    <string name="btn_login_choose_les">Load shared lesson</string>
    <string name="btn_login_share_gr">Share group</string>
    <string name="btn_login_share_les">Share lesson</string>

    <string-array name="week_day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="abbr_week_day_array">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>

    <string-array name="lesson_type">
        <item>Practice</item>
        <item>Theory</item>
        <item>Lab</item>
    </string-array>

    <string name="lesson_menu_title">Edit specific class</string>
    <string name="lesson_menu_imp">Mark as important</string>
    <string name="lesson_menu_hw">Edit homework</string>
    <string name="lesson_menu_canc">Cancel class</string>

    <string name="internet_dialog">No internet connection</string>
    <string name="internet_dialog_text">Please, turn on the internet </string>

    <string name="error_email">Error, needed gmail address</string>

    <string name="error">Error</string>
    <string name="relogin">Please, relogin</string>
    <string name="not_loaded">Resource is not loaded yet. Please wait.</string>

    <string-array name="class_time_array">
        <item>08:00 - 09:30</item>
        <item>10:00 - 11:30</item>
        <item>12:00 - 13:30</item>
        <item>14:00 - 15:30</item>
        <item>16:00 - 17:30</item>
    </string-array>

    <string-array name="class_details">
        <item>Lecturer</item>
        <item>Groups</item>
        <item>Instances</item>
    </string-array>

    <string name="group_search_placeholder">Group number:</string>
    <string name="lecturer_search_placeholder">Lecturer name:</string>

    <string name="search_recent_title">Recent:</string>
    <string name="error_title">Error</string>

    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="my_tt">My timetable</string>
    <string name="my_hw">My tasks</string>
    <string name="about">About</string>

    <string name="edit_menu">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="unimportnant">Mark as unimportant</string>
    <string name="importnant">Mark as important</string>
    <string name="homework">Homework</string>

    <string name="empty_class">No classes for this day</string>

    <style name="ExpandedAppBar" parent="@android:style/TextAppearance.Medium">
        <item name="android:textSize">28sp</item>
        <item name="android:textColor">#000</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textStyle">normal</item>
    </style>

    <style name="ExpandedAppBarPlus1" parent="@android:style/TextAppearance.Medium">
        <item name="android:textSize">28.5sp</item>
        <item name="android:textColor">#000</item>
        <item name="android:textStyle">bold</item>
    </style>
    <string name="btn_login_choose">Open existing</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_login_create">Create new</string>

    <style name="CollapsedAppBarPlus1" parent="@android:style/TextAppearance.Medium">
        <item name="android:textSize">24.5sp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textStyle">normal</item>
    </style>
</resources>
